<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/RootVerticalLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <trier.hochschule.ema.speakercontrol.MasterToggleButton
            android:id="@+id/allToggleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textOff="@string/parent_all_off"
            android:textOn="@string/parent_all_on"
            app:disableSlaves="false" />

        <LinearLayout
            android:id="@+id/centerSubwooferHLay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <ToggleButton
                android:id="@+id/centerToggleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textOff="@string/parentchild_center_off"
                android:textOn="@string/parentchild_center_on" />

            <ToggleButton
                android:id="@+id/subwooferToggleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textOff="@string/parentchild_subwoofer_off"
                android:textOn="@string/parentchild_subwoofer_on" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/HorizontalLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <trier.hochschule.ema.speakercontrol.MasterToggleButton
                    android:id="@+id/frontToggleButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textOff="@string/parentchild_front_off"
                    android:textOn="@string/parentchild_front_on"
                    app:disableSlaves="true" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ToggleButton
                        android:id="@+id/frontLeftToggleButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textOff="@string/child_left_off"
                        android:textOn="@string/child_left_on" />

                    <ToggleButton
                        android:id="@+id/frontRightToggleButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textOff="@string/child_right_off"
                        android:textOn="@string/child_right_on" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <trier.hochschule.ema.speakercontrol.MasterToggleButton
                    android:id="@+id/rearToggleButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textOff="@string/parentchild_rear_off"
                    android:textOn="@string/parentchild_rear_on"
                    app:disableSlaves="false" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ToggleButton
                        android:id="@+id/rearLeftToggleButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textOff="@string/child_left_off"
                        android:textOn="@string/child_left_on" />

                    <ToggleButton
                        android:id="@+id/rearRightToggleButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textOff="@string/child_right_off"
                        android:textOn="@string/child_right_on" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>